[tool.poetry]
name = "juke"
version = "0.1.0"
description = ""
authors = ["Andre Faria <andremarcalfaria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
docxtpl = "^0.15.1"
toml = "^0.10.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"

[tool.poetry.scripts]
juke = "juke.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
